# django_boilerplate

./: .coveragerc  .dockerignore  .env.dev  .env.dev.example  .env.prod.example  .env.qa.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  bandit.yaml  compose-common.yml  deploy.py  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.yml  entrypoint.api.sh  entrypoint.prod.sh  entrypoint.sh  entrypoint.worker.sh  gunicorn.conf.py  local.yml  production.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  staging.yml  tox.ini  traefik.Dockerfile  traefik.yml
.env_files/: .env.dev.example  .env.prod.example
.github/workflows/: deploy_to_production.yml  deploy_to_staging.yml  tests.yml
infra/app/: Dockerfile  Dockerfile.prod  before_migrate.sh  entrypoint.api.sh
infra/nginx/: nginx.conf  nginx.conf.template
infra/nginx/conf.d/: fallback_server.conf
infra/nginx/vhost.d/: default
infra/server/: start_nginx_acme.sh
infra/traefik/: traefik.Dockerfile
locale/pt_BR/LC_MESSAGES/: django.po
nginx/: nginx.conf
src/: manage.py
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/auth/: schemas.py  urls.py  views.py
src/api/v1/push_notifications/: schemas.py  urls.py  views.py
src/api/v1/users/: schemas.py  urls.py  views.py
src/app/: __init__.py  apps.py  asgi.py  celery.py  drf_exc_handler.py  exceptions.py  log_filters.py  services.py  urls.py  urls_dev.py  wsgi.py
src/app/admin/: __init__.py  mixins.py
src/app/base/: admin.py  celery_decorators.py  jwt_auth.py  models.py
src/app/celery/: __init__.py  app.py  decorators.py
src/app/consts/: __init__.py  http.py  i18n.py  push_notification.py
src/app/drf/: authentication.py  exc_handler.py  extensions.py  fields.py  metadata.py  openapi.py  pagination.py  serializers.py  utils.py  viewsets.py
src/app/ext/: abc.py  di.py
src/app/ext/email/: send_grid.py
src/app/ext/geocoding/: abc.py
src/app/ext/geocoding/backends/: google.py  position_stack.py  static.py
src/app/ext/messaging/: abc.py
src/app/ext/messaging/backends/: discord.py  stdout.py
src/app/ext/push_notifications/: abc.py  base.py  expo.py  providers.py
src/app/ext/push_notifications/backends/: expo.py  static.py
src/app/ext/sms/: __init__.py  abc.py  main.py
src/app/ext/sms/backends/: base.py  filebased.py  stdout.py  twilio.py
src/app/ext/storage/: aws_s3.py  fields.py
src/app/ext/zipcode/: abc.py
src/app/ext/zipcode/backends/: correios.py  static.py
src/app/fields/: phone.py
src/app/fields/br/: doc.py
src/app/forms/fields/: __init__.py  phone.py
src/app/forms/fields/br/: doc.py
src/app/i18n_switcher/: apps.py  switcher.py
src/app/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
src/app/logging/: filters.py  types.py  utils.py
src/app/middlewares/: base.py  i18n.py  log.py  tz.py
src/app/models/: __init__.py  base.py  phone.py
src/app/models/br/: doc.py
src/app/security/: __init__.py  obfuscate.py  verification_code.py
src/app/settings/: .env.example  celery.py  common.py  conf.py  dev.py  env.py  prod.py  test.py
src/app/settings/external_services/: geolocation.py  messaging.py  push_notification.py  sms.py  zipcode.py
src/app/settings/formats/pt/: formats.py
src/app/settings/infra/: hosting.py  log.py  reporting.py
src/app/settings/locale/pt_BR/LC_MESSAGES/: django.po
src/app/static/css/: custom_admin.css
src/app/storage/: aws_s3.py
src/app/templates/admin/: base.html  base_site.html  change_form.html
src/app/templates/material/admin/: user_picture.html
src/app/templates/material/admin/includes/: admin-out-bg.html
src/app/tests/: conftest.py  test_settings.py
src/app/validators/: __init__.py
src/app/validators/br/: __init__.py  doc.py
src/push_notifications/: admin.py  apps.py  exc.py  models.py  selectors.py  services.py  tasks.py
src/push_notifications/migrations/: 0001_initial.py  0002_initial.py
src/users/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py
src/users/api/: docs.py  err_messages.py  serializers.py  urls.py  views.py
src/users/api/v1/: serializers.py  urls.py  views.py
src/users/locale/pt_BR/LC_MESSAGES/: django.po
src/users/migrations/: 0001_initial.py  0002_alter_proxyuser_options.py  0002_delete_djangogroupproxy_group_remove_user_first_name_and_more.py  0002_proxyuser.py  0002_user_language_code_user_time_zone.py  0003_alter_user_options.py  0003_auto_20220317_1752.py  0004_alter_user_is_active_alter_user_is_staff_and_more.py  0005_user_notification_token.py
src/users/services/: account.py  auth.py
src/users/tests/: conftest.py  helpers.py  test_api.py  test_users.py
tests/: conftest.py  fakes.py  test_public_endpoints.py
tests/test_api/test_v1/: test_auth_endpoints.py  test_current_user_endpoints.py  test_push_notification_endpoints.py
tests/test_app/: test_celery.py
tests/test_app/test_admin/: test_mixins.py
tests/test_app/test_base/: test_admin.py  test_celery_decorators.py
tests/test_app/test_ext/: test_send_sms.py
tests/test_app/test_fields/: test_phone.py
tests/test_app/test_fields/test_br/: test_doc.py
tests/test_push_notifications/test_services/: test_push_notification_confirm_delivery.py  test_push_notification_create.py  test_push_notification_delivery_failed.py  test_push_notification_handle_push_receipt.py  test_push_notification_handle_push_ticket.py  test_push_notification_send.py
tests/test_users/: test_models.py  test_tasks.py
tests/test_users/test_api/test_v1/: test_views.py
tests/test_users/test_models/: test_perms.py
tests/test_users/test_services/: test_account.py  test_auth.py
