[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
allow_redefinition = true

[tool.black]
line-length = 100
extend-exclude = """
migrations
"""

[tool.isort]
profile = "black"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
_.env_file = ".env.dev"
collectstatic.cmd = "python manage.py collectstatic --noinput"
makemigrations.cmd = "python manage.py makemigrations"
migrate.cmd = "python manage.py migrate"
server.cmd = "python manage.py runserver"
createsuperuser.cmd = "python manage.py createsuperuser"
makemessages.shell = "cd src && pdm run python manage.py makemessages"
compilemessages.shell = "cd src && pdm run python manage.py compilemessages"
tests = { env_file = ".env.test", shell = "coverage run --source=src/ --rcfile=.coveragerc -m pytest tests/ && coverage html && google-chrome htmlcov/index.html"}

[tool.pdm.dev-dependencies]
dev = [
    "black==22.3.0",
    "pytest==7.0.1",
    "pytest-django>=4.5.2",
    "mypy==0.961",
    "django-debug-toolbar>=3.5",
    "coverage==6.3.2",
    "pre-commit>=2.19.0",
    "isort>=5.10.1",
    "python-on-whales>=0.56.0",
    "types-requests>=2.28.11.7",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
addopts = "--rootdir ./tests"

[project]
name = "boilerplate"
version = "0.1.0"
description = "Django Boilerplate"
authors = [
    {name = "Leandro de Souza", email = "leandrodesouzadev@gmail.com"},
]
dependencies = [
    "Django==4.1",
    "djangorestframework>=3.13.1",
    "celery[redis]>=5.2.7",
    "django-environ>=0.9.0",
    "django-jazzmin>=2.5.0",
    "drf-spectacular[sidecar]>=0.22.1",
    "django-cors-headers>=3.13.0",
    "psycopg2-binary>=2.9.3",
    "djangorestframework-simplejwt>=5.2.0",
    "setuptools>=62.6.0",
    "Pillow>=9.2.0",
]
requires-python = ">=3.9.13"
license = {text = "MIT"}

[project.optional-dependencies]
phonenumbers = [
    "phonenumbers>=8.13.6",
]
production = [
    "sendgrid>=6.9.7",
    "django-storages>=1.13.2",
    "boto3>=1.26.72",
    "gunicorn>=20.1.0",
]
brdocs = [
    "validate-docbr>=1.10.0",
]
