[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
allow_redefinition = true

[tool.black]
line-length = 100
extend-exclude = """
migrations
"""

[tool.isort]
profile = "black"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
_.env_file = ".env.dev"
collectstatic.cmd = "python manage.py collectstatic --noinput"
makemigrations.cmd = "python manage.py makemigrations"
migrate.cmd = "python manage.py migrate"
server.cmd = "python manage.py runserver"
createsuperuser.cmd = "python manage.py createsuperuser"
makemessages.shell = "cd src && pdm run python manage.py makemessages"
compilemessages.shell = "cd src && pdm run python manage.py compilemessages"
tests = { env_file = ".env.test", shell = "coverage run --source=src/ --rcfile=.coveragerc -m pytest tests/ && coverage html && google-chrome htmlcov/index.html"}

[tool.pdm.dev-dependencies]
dev = [
    "black==23.3.0",
    "pytest==7.3.2",
    "pytest-django==4.5.2",
    "mypy==1.3.0",
    "django-debug-toolbar==4.1",
    "coverage==7.2.7",
    "pre-commit==3.3.2",
    "isort==5.12.0",
    "types-requests==2.31.0.1",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
addopts = "--rootdir ./tests"

[project]
name = "boilerplate"
version = "0.1.0"
description = "Django Boilerplate"
authors = [
    {name = "Leandro de Souza", email = "leandrodesouzadev@gmail.com"},
]
dependencies = [
    "Django==4.2",
    "djangorestframework==3.14.0",
    "celery[redis]==5.3.0",
    "django-environ==0.10.0",
    "django-jazzmin==2.6.0",
    "drf-spectacular[sidecar]==0.26.2",
    "django-cors-headers==4.0.0",
    "psycopg2-binary==2.9.6",
    "djangorestframework-simplejwt==5.2.2",
    "Pillow==9.5.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
phonenumbers = [
    "phonenumbers>=8.13.13",
]
production = [
    "sendgrid==6.9.7",
    "django-storages==1.13.2",
    "boto3==1.26.152",
    "gunicorn==20.1.0",
]
brdocs = [
    "validate-docbr==1.10.0",
]
