[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
allow_redefinition = true

plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings.conf"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.scripts]
_.env_file = ".env"
collectstatic.cmd = "python manage.py collectstatic --noinput"
makemigrations.cmd = "python manage.py makemigrations"
migrate.cmd = "python manage.py migrate"
server.cmd = "python manage.py runserver"
createsuperuser.cmd = "python manage.py createsuperuser"
makemessages.shell = "cd src && pdm run python manage.py makemessages"
compilemessages.shell = "cd src && pdm run python manage.py compilemessages"
fixtures = { env_file = ".env.test", shell = "pytest --fixtures" }
tests = { env_file = ".env.test", shell = "coverage run --source=src/ --rcfile=.coveragerc -m pytest tests/ -x -vv && coverage html && google-chrome htmlcov/index.html"}

[tool.pdm.dev-dependencies]
dev = [
    "black==23.3.0",
    "pytest==7.3.2",
    "pytest-django==4.5.2",
    "mypy==1.3.0",
    "django-debug-toolbar==4.1",
    "coverage==7.2.7",
    "pre-commit==3.3.2",
    "isort==5.12.0",
    "types-requests==2.31.0.1",
    "bandit==1.7.5",
    "pytest-mock==3.11.1",
    "django-stubs[compatible-mypy]==4.2.1",
]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
addopts = "--rootdir ./tests"

[project]
name = "boilerplate"
version = "0.1.0"
description = "Django Boilerplate"
authors = [
    {name = "Leandro de Souza", email = "leandrodesouzadev@gmail.com"},
]
dependencies = [
    "Django==4.2",
    "djangorestframework==3.14.0",
    "celery[redis]==5.3.6",
    "django-environ==0.11.2",
    "drf-spectacular[sidecar]==0.27.0",
    "django-cors-headers==4.3.1",
    "psycopg2-binary==2.9.9",
    "djangorestframework-simplejwt==5.3.1",
    "Pillow==9.5.0",
    "validate-docbr==1.10.0",
    "phonenumbers==8.13.26",
    "django-storages==1.14.2",
    "boto3==1.34.2",
    "gunicorn==21.2.0",
    "requests==2.31.0",
    "django-extensions==3.2.3",
    "werkzeug==3.0.0",
    "django-filter==23.5",
    "structlog==23.2.0",
    "django-jet-reboot>=1.3.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}
